syntax = "proto3";

package common;

option go_package = "github.com/wylu1037/polyglot-plugin-showcase/proto/common";

// Common plugin interface that all plugins must implement
service Plugin {
  // GetMetadata returns plugin metadata
  rpc GetMetadata(MetadataRequest) returns (MetadataResponse);
  
  // Execute executes a plugin method with generic parameters
  rpc Execute(ExecuteRequest) returns (ExecuteResponse);
}

message MetadataRequest {}

message MetadataResponse {
  string name = 1;
  string version = 2;
  string description = 3;
  repeated string methods = 4; // Available methods
  map<string, string> capabilities = 5; // Additional capabilities
  int32 protocol_version = 6; // Protocol version the plugin was built with
}

message ExecuteRequest {
  string method = 1; // Method to execute
  map<string, string> params = 2; // Generic string parameters
}

message ExecuteResponse {
  optional string result = 1; // Result of the execution (present on success)
  bool success = 2; // Whether the execution was successful
  optional string error = 3; // Optional error message if the execution was not successful
}

